[workspace]
members=["crates/*"]
default-members=[".", "crates/tinywasm", "crates/types", "crates/parser"]
resolver="2"

[workspace.dependencies]
wast="245"
wat="1.245"
wasmparser={version="0.245", default-features=false}
eyre="0.6"
log="0.4"
pretty_env_logger="0.5"
criterion={version="0.8", default-features=false, features=["cargo_bench_support", "rayon"]}
wasm-testsuite={version="0.6"}
indexmap="2.13"
owo-colors={version="4.3"}
serde_json={version="1.0"}
serde={version="1.0", features=["derive"]}

[workspace.package]
version="0.9.0-alpha.0"
rust-version="1.93"
edition="2024"
license="MIT OR Apache-2.0"
authors=["Henry Gressmann <mail@henrygressmann.de>"]
repository="https://github.com/explodingcamera/tinywasm"
categories=["wasm", "no-std"]
keywords=["tinywasm"]

[package]
name="tinywasm-root"
version.workspace=true
publish=false
edition.workspace=true
rust-version.workspace=true

[[example]]
name="wasm-rust"
test=false

[dev-dependencies]
wat.workspace=true
eyre.workspace=true
pretty_env_logger.workspace=true
tinywasm={path="crates/tinywasm"}

[profile.bench]
opt-level=3
lto="thin"
codegen-units=1
debug=true

[profile.profiling]
inherits="release"
debug=true

[profile.wasm]
opt-level=3
lto="thin"
codegen-units=1
panic="abort"
inherits="release"

[profile.samply]
inherits="release"
debug=true
