[workspace]
members=["crates/*"]
default-members=[".", "crates/tinywasm", "crates/types", "crates/parser"]
resolver="2"

[workspace.dependencies]
tinywasm-parser={version="0.9.0-alpha.0", path="crates/parser", default-features=false}
tinywasm-types={version="0.9.0-alpha.0", path="crates/types", default-features=false}
tinywasm-cli={version="0.9.0-alpha.0", path="crates/cli", default-features=false}
tinywasm={version="0.9.0-alpha.0", path="crates/tinywasm", default-features=false}

criterion={version="0.8", default-features=false, features=["cargo_bench_support", "rayon"]}
eyre="0.6"
indexmap="2.14"
log="0.4"
owo-colors={version="4.3"}
pretty_env_logger="0.5"
serde_json={version="1.0"}
serde={version="1.0", features=["derive"]}
wasm-testsuite={version="0.7"}
wasmparser={version="0.247", default-features=false}
wast="247"
wat="1.247"

[workspace.package]
version="0.9.0-alpha.0"
rust-version="1.95"
edition="2024"
license="MIT OR Apache-2.0"
authors=["Henry Gressmann <crates@henrygressmann.de>"]
repository="https://github.com/explodingcamera/tinywasm"
categories=["wasm", "no-std", "compilers", "virtualization", "embedded"]
keywords=["tinywasm", "wasm", "webassembly", "interpreter", "no-std"]

[package]
name="tinywasm-root"
version.workspace=true
publish=false
edition.workspace=true
rust-version.workspace=true

[[example]]
name="wasm-rust"
test=false

[dev-dependencies]
wat.workspace=true
eyre.workspace=true
pretty_env_logger.workspace=true
tinywasm={path="crates/tinywasm"}

[profile.bench]
opt-level=3
lto="thin"
codegen-units=1
debug=true

[profile.profiling]
inherits="release"
debug=true

[profile.wasm]
opt-level=3
lto="thin"
codegen-units=1
panic="abort"
inherits="release"

[profile.samply]
inherits="release"
debug=true
