[package]
name="benchmarks"
publish=false
edition.workspace=true

[dependencies]
criterion={version="0.5", features=["html_reports"]}
tinywasm={path="../crates/tinywasm"}
wat={version="1"}
wasmi={version="0.31", features=["std"]}
wasmer={version="4.3", features=["cranelift", "singlepass"]}
argon2={version="0.5"}

[[bench]]
name="selfhosted"
harness=false

[[bench]]
name="fibonacci"
harness=false

[[bench]]
name="argon2id"
harness=false
