[package]
name="tinywasm-cli"
version.workspace=true
description="Command-line interface for TinyWasm"
edition.workspace=true
license.workspace=true
authors.workspace=true
repository.workspace=true
rust-version.workspace=true
keywords.workspace=true
categories=["wasm"]
readme="README.md"

[[bin]]
name="tinywasm-cli"
path="src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre.workspace=true
log.workspace=true
pretty_env_logger.workspace=true
tinywasm={version="0.9.0-alpha.0", path="../tinywasm", features=["std", "parser"]}
argh="0.1"
wast={workspace=true, optional=true}

[features]
default=["wat"]
wat=["dep:wast"]
