[package]
name="tinywasm-parser"
version.workspace=true
description="TinyWasm parser"
edition.workspace=true
license.workspace=true
authors.workspace=true
repository.workspace=true
rust-version.workspace=true

[dependencies]
wasmparser={version="0.213", default-features=false, features=["validate"]}
log={workspace=true, optional=true}
tinywasm-types={version="0.8.0-alpha.0", path="../types", default-features=false}

[features]
default=["std", "logging"]
logging=["log"]
std=["tinywasm-types/std", "wasmparser/std"]
nightly=[]
