[package]
name="tinywasm-parser"
version.workspace=true
description="Parser and lowering pipeline for TinyWasm"
edition.workspace=true
license.workspace=true
authors.workspace=true
repository.workspace=true
rust-version.workspace=true
keywords.workspace=true
categories.workspace=true
readme="README.md"

[dependencies]
wasmparser={workspace=true, features=["validate", "features", "simd"]}
log={workspace=true, optional=true}
tinywasm-types={workspace=true}

[features]
default=["std", "log", "parallel"]
log=["dep:log"]
std=["tinywasm-types/std", "wasmparser/std"]
parallel=["std"]
