[package]
name="tinywasm"
version.workspace=true
description="A tiny WebAssembly interpreter"
edition.workspace=true
license.workspace=true
authors.workspace=true
repository.workspace=true
rust-version.workspace=true
readme="../../README.md"

[lib]
name="tinywasm"
path="src/lib.rs"

[dependencies]
log={workspace=true, optional=true}
tinywasm-parser={version="0.9.0-alpha.0", path="../parser", default-features=false, optional=true}
tinywasm-types={version="0.9.0-alpha.0", path="../types", default-features=false}
libm={version="0.2", default-features=false}

[dev-dependencies]
wasm-testsuite={version="0.4.0"}
indexmap="2.7"
wast={workspace=true}
wat={workspace=true}
eyre={workspace=true}
pretty_env_logger={workspace=true}
criterion={workspace=true}
owo-colors={version="4.0"}
serde_json={version="1.0"}
serde={version="1.0", features=["derive"]}

[features]
default=["std", "parser", "logging", "archive"]
logging=["log", "tinywasm-parser?/logging", "tinywasm-types/logging"]
std=["tinywasm-parser?/std", "tinywasm-types/std"]
parser=["dep:tinywasm-parser"]
archive=["tinywasm-types/archive"]
test_async=[] #feels weird putting it here

[[test]]
name="test-wasm-1"
harness=false

[[test]]
name="test-wasm-2"
harness=false

[[test]]
name="test-wasm-3"
harness=false

[[test]]
name="test-wasm-multi-memory"
harness=false

[[test]]
name="test-wasm-annotations"
harness=false

[[test]]
name="test-wasm-custom-page-sizes"
harness=false

[[test]]
name="test-wasm-memory64"
harness=false
test=false

[[test]]
name="test-wasm-extended-const"
harness=false
test=false

[[test]]
name="test-wasm-relaxed-simd"
harness=false
test=false

[[test]]
name="test-wast"
harness=false
test=false

[[bench]]
name="argon2id"
harness=false

[[bench]]
name="fibonacci"
harness=false

[[bench]]
name="tinywasm"
harness=false
