[package]
name="tinywasm-types"
version.workspace=true
description="TinyWasm types"
edition.workspace=true
license.workspace=true
authors.workspace=true
repository.workspace=true
rust-version.workspace=true

[dependencies]
log={workspace=true, optional=true}
rkyv={version="0.8.1", optional=true, default-features=false, features=["alloc", "bytecheck"]}
serde={version="1.0.0", optional=true, default-features=false, features=["derive","alloc"]}

[features]
default=["std", "logging", "archive"]
std=["rkyv?/std", "serde?/std"]
serde=["dep:serde"]
archive=["dep:rkyv"]
logging=["dep:log"]
