[package]
name="tinywasm-types"
version.workspace=true
description="Shared runtime, module, and archive types for TinyWasm"
edition.workspace=true
license.workspace=true
authors.workspace=true
repository.workspace=true
rust-version.workspace=true
keywords.workspace=true
categories.workspace=true
readme="README.md"

[dependencies]
log={workspace=true, optional=true}
postcard={version="1.1", optional=true, default-features=false, features=["alloc"]}
serde={version="1.0", optional=true, default-features=false, features=["alloc", "rc"]}

[features]
default=["std", "log", "archive", "debug"]

std=["serde?/std"]
archive=["dep:postcard", "dep:serde"]
log=["dep:log"]
debug=[]
