[package]
name="wasm-testsuite"
version="0.3.0"
description="Mirror of the WebAssembly core testsuite for use in testing WebAssembly implementations"
license="Apache-2.0"
readme="README.md"
edition.workspace=true
authors.workspace=true
repository.workspace=true

[lib]
path="lib.rs"

[package.metadata.workspaces]
independent=true

[dependencies]
rust-embed={version="8.3", features=["include-exclude"]}
