cargo-features=["per-package-target"]

# treat this as an independent package
[workspace]

[package]
publish=false
name="rust-wasm-examples"
forced-target="wasm32-unknown-unknown"
edition="2021"

[dependencies]
tinywasm={path="../../crates/tinywasm", features=["parser", "std", "unsafe"]}

[[bin]]
name="hello"
path="src/hello.rs"

[[bin]]
name="print"
path="src/print.rs"

[[bin]]
name="tinywasm"
path="src/tinywasm.rs"

[[bin]]
name="fibonacci"
path="src/fibonacci.rs"

[profile.wasm]
opt-level=3
lto="thin"
codegen-units=1
panic="abort"
inherits="release"
