cargo-features=["per-package-target"]

# treat this as an independent package
[workspace]

[package]
publish=false
name="rust-wasm-examples"
forced-target="wasm32-unknown-unknown"
edition="2021"

[dependencies]
tinywasm={path="../../crates/tinywasm", default-features=false, features=["parser", "archive"]}
argon2={version="0.5"}
lol_alloc="0.4.1"

[features]
default=["std"]
std=["tinywasm/std"]

[[bin]]
name="hello"
path="src/hello.rs"

[[bin]]
name="print"
path="src/print.rs"

[[bin]]
name="tinywasm"
path="src/tinywasm.rs"

[[bin]]
name="tinywasm_no_std"
path="src/tinywasm_no_std.rs"

[[bin]]
name="fibonacci"
path="src/fibonacci.rs"

[[bin]]
name="argon2id"
path="src/argon2id.rs"

[profile.wasm]
opt-level=3
lto="thin"
codegen-units=1
panic="abort"
inherits="release"
